<resources>
    <string name="app_name">Shamo Android</string>
    <string name="cd_img_splash_screen">Image Splash Screen</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="register_and_happy_shoping">Register and Happy Shoping</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="your_username">Your Username</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="password">Password</string>
    <string name="your_password">Your Password</string>
    <string name="text_sign_up"> Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="text_sign_in"> Sign In</string>
    <string name="sign_in_to_countinue">Sign In to Countinue</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_home">Hello, %1$s</string>
    <string name="username_home">\@%1$s</string>
    <string name="popular_products">Popular Products</string>
    <string name="price">$%1$d</string>
    <string name="items">%1$d Items</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="for_you">For You</string>
    <string name="price_starts_from">Price starts from</string>
    <string name="description">Description</string>
    <string name="fimiliar_shoes">Fimiliar Shoes</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="hurray">Hurray :)</string>
    <string name="item_added_successfully">Item added successfully</string>
    <string name="favorite_shoes">Favorite Shoes</string>
    <string name="you_don_t_have_dream_shoes">You don\'t have dream shoes?</string>
    <string name="let_s_find_your_favorite_shoes">Let\'s find your favorite shoes</string>
    <string name="remove">Remove</string>
    <string name="your_cart">Your Cart</string>
    <string name="opss_your_cart_is_empty">Opss! Your Cart is Empty</string>
    <string name="continue_to_checkout">Continue to Checkout</string>
    <string name="subtotal">Subtotal</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_orders">Your Orders</string>
    <string name="help">Help</string>
    <string name="general">General</string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="term_of_service">Term of Service</string>
    <string name="rate_app">Rate App</string>
    <string name="checkout_details">Checkout Details</string>
    <string name="list_items">List Items</string>
    <string name="address_details">Address Details</string>
    <string name="store_location">Store Location</string>
    <string name="adidas_core">Adidas Core</string>
    <string name="your_address">Your Address</string>
    <string name="marsemoon">Marsemoon</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="shipping">Shipping</string>
    <string name="product_price">Product Price</string>
    <string name="free">Free</string>
    <string name="total">Total</string>
    <string name="checkout_now">Checkout Now</string>
    <string name="item_checkout_successfully">Item checkout successfully</string>
</resources>