<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/core_navigation"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.faroh.shamoandroid.view.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/cart"
        android:name="com.faroh.shamoandroid.view.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/favourite"
        android:name="com.faroh.shamoandroid.view.favourite.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/profile"
        android:name="com.faroh.shamoandroid.view.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>