<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_1"
    tools:context=".view.signup.SignUpActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_up"
        android:textColor="@color/primary_text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_register_and_happy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/poppins"
        android:text="@string/register_and_happy_shoping"
        android:textColor="@color/secondary_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_sign_up"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/full_name"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tv_register_and_happy"
        app:layout_constraintTop_toBottomOf="@id/tv_register_and_happy" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_fullname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/small_fullname"
        android:drawablePadding="16dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/your_full_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/secondary_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_fullname"
        app:layout_constraintTop_toBottomOf="@id/tv_fullname" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/username"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tv_register_and_happy"
        app:layout_constraintTop_toBottomOf="@id/et_fullname" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/small_username"
        android:drawablePadding="16dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/your_username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/secondary_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_fullname"
        app:layout_constraintTop_toBottomOf="@id/tv_username" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/email_address"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tv_register_and_happy"
        app:layout_constraintTop_toBottomOf="@id/et_username" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email_address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/small_email_address"
        android:drawablePadding="16dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/your_email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/secondary_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_fullname"
        app:layout_constraintTop_toBottomOf="@id/tv_email_address" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/password"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tv_register_and_happy"
        app:layout_constraintTop_toBottomOf="@id/et_email_address" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/small_password"
        android:drawablePadding="16dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/your_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/secondary_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_fullname"
        app:layout_constraintTop_toBottomOf="@id/tv_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/btn_sign_up"
        app:layout_constraintStart_toStartOf="@id/btn_sign_up"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_you_ready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/already_have_an_account"
            android:textColor="@color/secondary_text"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sign_in_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/text_sign_in"
            android:textColor="@color/primary"
            android:textSize="12sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?attr/progressBarStyle"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>