<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_1"
    tools:context=".view.cart.CartFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/iv_title_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/your_cart"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_bg_frag_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:background="@color/background_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_title_cart" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@id/tv_subtotal_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_bg_frag_cart"
        tools:listitem="@layout/item_cart_product" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/poppins"
        android:text="@string/subtotal"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/bg_footer_cart"
        app:layout_constraintStart_toStartOf="@id/rv_cart" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_subtotal_price"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/price"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/bg_footer_cart"
        app:layout_constraintEnd_toEndOf="@id/rv_cart"
        tools:text="$287,96" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bg_footer_cart"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@drawable/custom_background_footer_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/btn_con_check"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/custom_background_button"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="@id/bg_footer_cart"
        app:layout_constraintEnd_toEndOf="@id/bg_footer_cart"
        app:layout_constraintStart_toStartOf="@id/bg_footer_cart"
        app:layout_constraintTop_toTopOf="@id/bg_footer_cart">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/continue_to_checkout"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bg_empty_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="74dp"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_empty_cart" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/opss_your_cart_is_empty"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins"
            android:text="@string/let_s_find_your_favorite_shoes"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>